@@ -2,6 +2,7 @@
 	* Upgraded to Rhino 1.7 release 2 PRERELEASE 2008 09 30, so we
 	can extend abstract Java classes, which didn't work in 1.7r1.
 
+	* Enabled a proper https URI implementation.
 
 0.9.20080927
 	* Fixed a bug that closed System.in in script mode, causing
